test/invalid/64371_wrong_num_args/wrong_num_args.agu
-- Author: 64371, Ricardo Costa

let add(x, y): (Int, Int) -> Int = x + y

let main: Unit =
    let res: Int = add(1, 2, 3); -- semantic error: wrong number of arguments
    print(res)
